--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "dev": "react-scripts start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -54,6 +54,7 @@
   "devDependencies": {
     "css-loader": "^6.2.0",
     "sass": "1.38.0",
-    "style-loader": "3.2.1"
+    "style-loader": "3.2.1",
+    "typescript": "^4.9.5"
   }
 }
