--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "simple-react-lightbox": "^3.6.8",
     "swiper": "^6.8.4",
     "web-vitals": "^1.0.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
     "wowjs": "^1.1.3"
   },
   "scripts": {
@@ -54,7 +56,6 @@
   "devDependencies": {
     "css-loader": "^6.2.0",
     "sass": "1.38.0",
-    "style-loader": "3.2.1",
-    "typescript": "^4.9.5"
+    "style-loader": "3.2.1"
   }
 }
